# AI-Agents-Hackaton2025-

./: .env  .env_example  .gitignore  README.md  config  crew.py
Tempo/: index.html  pp.py  teste.html
Tempo/assets/css/: main.css
cybersecurityteam/: pyproject.toml
cybersecurityteam/src/cybersecurityteam/: crew.py  main.py  pyproject.toml
cybersecurityteam/src/cybersecurityteam/config/: agents.yaml  tasks.yaml
cybersecurityteam/src/cybersecurityteam/tools/: custom_tool.py
